@@ -2,5 +2,5 @@
   --  The login success message
   -->
 <h1>Success!</h1>
-You are about to be redirected to: <p><a href="$FORM_userurl">$FORM_userurl</a></p>
+You are about to be redirected to: <p><a href="${FORM_redirurl:-$FORM_userurl}">${FORM_redirurl:-$FORM_userurl}</a></p>
 To log out, type "logout" (or "http://logout/") in your browser. <b>enjoy!</b>
